--- a/indexprincipal.html
+++ b/indexprincipal.html
@@ -11,7 +11,7 @@
     <div class="div-nav-bar">
         <header class="header-nav-bar">
               <img src="/img/gorilla-logo-updated-l.png" alt="">
-              <p style="color: black; font-size: 1.5rem;font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; text-transform: uppercase;">sejam bem-vindos</p>
+              <!-- <p style="color: white; font-size: 1.5rem;font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; text-transform: uppercase;">sejam bem-vindos</p> -->
             <nav>
                  <ul>
                     <li><a href="#">Contatos</a></li>
@@ -22,9 +22,9 @@
           </header>
     </div>
             <h1>Primordio Men</h1>
-            <div class="div-h2">
+            <!-- <div class="div-h2">
                 <h2>Seu Novo Estilo</h2>
-            </div>
+            </div> -->
             <div class="div-conteudo">
                 <section class="container-img">
                     <div class="div-img">
