--- a/indexprincipal.html
+++ b/indexprincipal.html
@@ -25,7 +25,7 @@
             <!-- <div class="div-h2">
                 <h2>Seu Novo Estilo</h2>
             </div> -->
-            <div class="div-conteudo">
+            <main class="div-conteudo">
                 <section class="container-img">
                     <div class="div-img">
                        <a href="#"> <img src="/img/1683919373452-areia-fotosite-frontal.jpg.avif" alt=""></a>
@@ -47,7 +47,7 @@
                    <section class="sobre-nos" id="sobre-nos">
                       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quam distinctio voluptate numquam delectus accusantium atque sint accusamus reiciendis sequi? Quia aliquid tempore, accusamus libero dicta reiciendis saepe exercitationem earum impedit architecto vel eligendi! Cupiditate enim dolores ex minus necessitatibus sint iusto. Praesentium, facere? Debitis, ducimus cumque, quasi, architecto consectetur a corporis perspiciatis id quam itaque quaerat nam labore cupiditate aliquam iste nobis ea dolores pariatur eaque adipisci necessitatibus. Ducimus, impedit deserunt! Enim eveniet quibusdam quis reiciendis doloremque? Sequi saepe ab nesciunt sint laborum praesentium non repudiandae accusamus quia doloribus accusantium, debitis alias dolorum maxime beatae veniam ex suscipit molestias enim.</p>
                    </section>
-            </div> 
+                </main> 
         <footer>
             <ul><a href="#">instagram</a></ul>
             <ul><a href="#">Whatsap</a></ul>
